decafeGenerated/grammars/grammars/DecafeParser.py
# Generated from grammars\Decafe.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class DecafeParser ( Parser ):

    grammarFileName = "Decafe.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'class'", "';'", "'['", "']'", "'struct'", 
                     "'{'", "'}'", "'int'", "'char'", "'boolean'", "'void'", 
                     "'('", "','", "')'", "'='", "'if'", "'else'", "'while'", 
                     "'return'", "'.'", "'-'", "'!'", "'+'", "'%'", "'*'", 
                     "'/'", "'<'", "'>'", "'<='", "'>='", "'=='", "'!='", 
                     "'&&'", "'||'", "'true'", "'false'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "ID", "NUM", "CHAR", "LETTER", "DIGIT", 
                      "SPACE" ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_classDeclaration = 2
    RULE_varDeclaration = 3
    RULE_structDeclaration = 4
    RULE_structInstantiation = 5
    RULE_varType = 6
    RULE_methodDeclaration = 7
    RULE_methodType = 8
    RULE_parameter = 9
    RULE_parameterType = 10
    RULE_block = 11
    RULE_statement = 12
    RULE_asignStmt = 13
    RULE_ifStmt = 14
    RULE_whileStmt = 15
    RULE_returnStmt = 16
    RULE_location = 17
    RULE_expression = 18
    RULE_arith_op = 19
    RULE_arith_op_derived = 20
    RULE_methodCall = 21
    RULE_arg = 22
    RULE_op = 23
    RULE_rel_op = 24
    RULE_eq_op = 25
    RULE_cond_op = 26
    RULE_literal = 27
    RULE_int_literal = 28
    RULE_char_literal = 29
    RULE_bool_literal = 30

    ruleNames =  [ "program", "declaration", "classDeclaration", "varDeclaration", 
                   "structDeclaration", "structInstantiation", "varType", 
                   "methodDeclaration", "methodType", "parameter", "parameterType", 
                   "block", "statement", "asignStmt", "ifStmt", "whileStmt", 
                   "returnStmt", "location", "expression", "arith_op", "arith_op_derived", 
                   "methodCall", "arg", "op", "rel_op", "eq_op", "cond_op", 
                   "literal", "int_literal", "char_literal", "bool_literal" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    ID=37
    NUM=38
    CHAR=39
    LETTER=40
    DIGIT=41
    SPACE=42

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafeParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(DecafeParser.DeclarationContext,i)


        def getRuleIndex(self):
            return DecafeParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = DecafeParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 62
                self.declaration()
                self.state = 65 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DecafeParser.T__0) | (1 << DecafeParser.T__4) | (1 << DecafeParser.T__7) | (1 << DecafeParser.T__8) | (1 << DecafeParser.T__9) | (1 << DecafeParser.T__10))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def structDeclaration(self):
            return self.getTypedRuleContext(DecafeParser.StructDeclarationContext,0)


        def structInstantiation(self):
            return self.getTypedRuleContext(DecafeParser.StructInstantiationContext,0)


        def varDeclaration(self):
            return self.getTypedRuleContext(DecafeParser.VarDeclarationContext,0)


        def methodDeclaration(self):
            return self.getTypedRuleContext(DecafeParser.MethodDeclarationContext,0)


        def classDeclaration(self):
            return self.getTypedRuleContext(DecafeParser.ClassDeclarationContext,0)


        def getRuleIndex(self):
            return DecafeParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = DecafeParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 72
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 67
                self.structDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 68
                self.structInstantiation()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 69
                self.varDeclaration()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 70
                self.methodDeclaration()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 71
                self.classDeclaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.lex = None # Token

        def block(self):
            return self.getTypedRuleContext(DecafeParser.BlockContext,0)


        def ID(self):
            return self.getToken(DecafeParser.ID, 0)

        def getRuleIndex(self):
            return DecafeParser.RULE_classDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDeclaration" ):
                listener.enterClassDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDeclaration" ):
                listener.exitClassDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDeclaration" ):
                return visitor.visitClassDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def classDeclaration(self):

        localctx = DecafeParser.ClassDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_classDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(DecafeParser.T__0)
            self.state = 75
            localctx.lex = self.match(DecafeParser.ID)
            self.state = 76
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DecafeParser.RULE_varDeclaration

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ListVarContext(VarDeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafeParser.VarDeclarationContext
            super().__init__(parser)
            self.typevar = None # VarTypeContext
            self.lex = None # Token
            self.size = None # Token
            self.copyFrom(ctx)

        def varType(self):
            return self.getTypedRuleContext(DecafeParser.VarTypeContext,0)

        def ID(self):
            return self.getToken(DecafeParser.ID, 0)
        def NUM(self):
            return self.getToken(DecafeParser.NUM, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListVar" ):
                listener.enterListVar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListVar" ):
                listener.exitListVar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListVar" ):
                return visitor.visitListVar(self)
            else:
                return visitor.visitChildren(self)


    class UniqueVarContext(VarDeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafeParser.VarDeclarationContext
            super().__init__(parser)
            self.typevar = None # VarTypeContext
            self.lex = None # Token
            self.copyFrom(ctx)

        def varType(self):
            return self.getTypedRuleContext(DecafeParser.VarTypeContext,0)

        def ID(self):
            return self.getToken(DecafeParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUniqueVar" ):
                listener.enterUniqueVar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUniqueVar" ):
                listener.exitUniqueVar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUniqueVar" ):
                return visitor.visitUniqueVar(self)
            else:
                return visitor.visitChildren(self)



    def varDeclaration(self):

        localctx = DecafeParser.VarDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_varDeclaration)
        try:
            self.state = 89
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = DecafeParser.UniqueVarContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 78
                localctx.typevar = self.varType()
                self.state = 79
                localctx.lex = self.match(DecafeParser.ID)
                self.state = 80
                self.match(DecafeParser.T__1)
                pass

            elif la_ == 2:
                localctx = DecafeParser.ListVarContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 82
                localctx.typevar = self.varType()
                self.state = 83
                localctx.lex = self.match(DecafeParser.ID)
                self.state = 84
                self.match(DecafeParser.T__2)
                self.state = 85
                localctx.size = self.match(DecafeParser.NUM)
                self.state = 86
                self.match(DecafeParser.T__3)
                self.state = 87
                self.match(DecafeParser.T__1)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.lex = None # Token

        def ID(self):
            return self.getToken(DecafeParser.ID, 0)

        def varDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafeParser.VarDeclarationContext)
            else:
                return self.getTypedRuleContext(DecafeParser.VarDeclarationContext,i)


        def getRuleIndex(self):
            return DecafeParser.RULE_structDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStructDeclaration" ):
                listener.enterStructDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStructDeclaration" ):
                listener.exitStructDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStructDeclaration" ):
                return visitor.visitStructDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def structDeclaration(self):

        localctx = DecafeParser.StructDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_structDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(DecafeParser.T__4)
            self.state = 92
            localctx.lex = self.match(DecafeParser.ID)
            self.state = 93
            self.match(DecafeParser.T__5)
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DecafeParser.T__4) | (1 << DecafeParser.T__7) | (1 << DecafeParser.T__8) | (1 << DecafeParser.T__9) | (1 << DecafeParser.T__10))) != 0):
                self.state = 94
                self.varDeclaration()
                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 100
            self.match(DecafeParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructInstantiationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.struct = None # Token
            self.lex = None # Token

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(DecafeParser.ID)
            else:
                return self.getToken(DecafeParser.ID, i)

        def getRuleIndex(self):
            return DecafeParser.RULE_structInstantiation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStructInstantiation" ):
                listener.enterStructInstantiation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStructInstantiation" ):
                listener.exitStructInstantiation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStructInstantiation" ):
                return visitor.visitStructInstantiation(self)
            else:
                return visitor.visitChildren(self)




    def structInstantiation(self):

        localctx = DecafeParser.StructInstantiationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_structInstantiation)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(DecafeParser.T__4)
            self.state = 103
            localctx.struct = self.match(DecafeParser.ID)
            self.state = 104
            localctx.lex = self.match(DecafeParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarTypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(DecafeParser.ID, 0)

        def structDeclaration(self):
            return self.getTypedRuleContext(DecafeParser.StructDeclarationContext,0)


        def getRuleIndex(self):
            return DecafeParser.RULE_varType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarType" ):
                listener.enterVarType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarType" ):
                listener.exitVarType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarType" ):
                return visitor.visitVarType(self)
            else:
                return visitor.visitChildren(self)




    def varType(self):

        localctx = DecafeParser.VarTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_varType)
        try:
            self.state = 113
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 106
                self.match(DecafeParser.T__7)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 107
                self.match(DecafeParser.T__8)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 108
                self.match(DecafeParser.T__9)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 109
                self.match(DecafeParser.T__4)
                self.state = 110
                self.match(DecafeParser.ID)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 111
                self.structDeclaration()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 112
                self.match(DecafeParser.T__10)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.returnType = None # MethodTypeContext
            self.lex = None # Token

        def block(self):
            return self.getTypedRuleContext(DecafeParser.BlockContext,0)


        def methodType(self):
            return self.getTypedRuleContext(DecafeParser.MethodTypeContext,0)


        def ID(self):
            return self.getToken(DecafeParser.ID, 0)

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafeParser.ParameterContext)
            else:
                return self.getTypedRuleContext(DecafeParser.ParameterContext,i)


        def getRuleIndex(self):
            return DecafeParser.RULE_methodDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodDeclaration" ):
                listener.enterMethodDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodDeclaration" ):
                listener.exitMethodDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethodDeclaration" ):
                return visitor.visitMethodDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def methodDeclaration(self):

        localctx = DecafeParser.MethodDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_methodDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            localctx.returnType = self.methodType()
            self.state = 116
            localctx.lex = self.match(DecafeParser.ID)
            self.state = 117
            self.match(DecafeParser.T__11)
            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DecafeParser.T__7) | (1 << DecafeParser.T__8) | (1 << DecafeParser.T__9))) != 0):
                self.state = 118
                self.parameter()
                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==DecafeParser.T__12:
                    self.state = 119
                    self.match(DecafeParser.T__12)
                    self.state = 120
                    self.parameter()
                    self.state = 125
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 128
            self.match(DecafeParser.T__13)
            self.state = 129
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodTypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DecafeParser.RULE_methodType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodType" ):
                listener.enterMethodType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodType" ):
                listener.exitMethodType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethodType" ):
                return visitor.visitMethodType(self)
            else:
                return visitor.visitChildren(self)




    def methodType(self):

        localctx = DecafeParser.MethodTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_methodType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DecafeParser.T__7) | (1 << DecafeParser.T__8) | (1 << DecafeParser.T__9) | (1 << DecafeParser.T__10))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.typevar = None # ParameterTypeContext
            self.lex = None # Token

        def parameterType(self):
            return self.getTypedRuleContext(DecafeParser.ParameterTypeContext,0)


        def ID(self):
            return self.getToken(DecafeParser.ID, 0)

        def getRuleIndex(self):
            return DecafeParser.RULE_parameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter" ):
                listener.enterParameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter" ):
                listener.exitParameter(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter" ):
                return visitor.visitParameter(self)
            else:
                return visitor.visitChildren(self)




    def parameter(self):

        localctx = DecafeParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_parameter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            localctx.typevar = self.parameterType()
            self.state = 134
            localctx.lex = self.match(DecafeParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterTypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DecafeParser.RULE_parameterType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterType" ):
                listener.enterParameterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterType" ):
                listener.exitParameterType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameterType" ):
                return visitor.visitParameterType(self)
            else:
                return visitor.visitChildren(self)




    def parameterType(self):

        localctx = DecafeParser.ParameterTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_parameterType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DecafeParser.T__7) | (1 << DecafeParser.T__8) | (1 << DecafeParser.T__9))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafeParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(DecafeParser.DeclarationContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafeParser.StatementContext)
            else:
                return self.getTypedRuleContext(DecafeParser.StatementContext,i)


        def getRuleIndex(self):
            return DecafeParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = DecafeParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(DecafeParser.T__5)
            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DecafeParser.T__0) | (1 << DecafeParser.T__4) | (1 << DecafeParser.T__7) | (1 << DecafeParser.T__8) | (1 << DecafeParser.T__9) | (1 << DecafeParser.T__10))) != 0):
                self.state = 139
                self.declaration()
                self.state = 144
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DecafeParser.T__1) | (1 << DecafeParser.T__5) | (1 << DecafeParser.T__11) | (1 << DecafeParser.T__15) | (1 << DecafeParser.T__17) | (1 << DecafeParser.T__18) | (1 << DecafeParser.T__20) | (1 << DecafeParser.T__21) | (1 << DecafeParser.T__34) | (1 << DecafeParser.T__35) | (1 << DecafeParser.ID) | (1 << DecafeParser.NUM) | (1 << DecafeParser.CHAR))) != 0):
                self.state = 145
                self.statement()
                self.state = 150
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 151
            self.match(DecafeParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifStmt(self):
            return self.getTypedRuleContext(DecafeParser.IfStmtContext,0)


        def whileStmt(self):
            return self.getTypedRuleContext(DecafeParser.WhileStmtContext,0)


        def returnStmt(self):
            return self.getTypedRuleContext(DecafeParser.ReturnStmtContext,0)


        def methodCall(self):
            return self.getTypedRuleContext(DecafeParser.MethodCallContext,0)


        def block(self):
            return self.getTypedRuleContext(DecafeParser.BlockContext,0)


        def asignStmt(self):
            return self.getTypedRuleContext(DecafeParser.AsignStmtContext,0)


        def expression(self):
            return self.getTypedRuleContext(DecafeParser.ExpressionContext,0)


        def getRuleIndex(self):
            return DecafeParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = DecafeParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 165
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 153
                self.ifStmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 154
                self.whileStmt()
                pass
